Bug 298508 - when trying to update "Sachsen", "Niedersachsen" is downloaded in MoNav config widget
Summary: when trying to update "Sachsen", "Niedersachsen" is downloaded in MoNav confi...
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: 1.4 (KDE 4.9)
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-20 22:00 UTC by Bernhard Beschow
Modified: 2012-05-22 09:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: KDE-4.8.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Beschow 2012-04-20 22:00:49 UTC
when trying to update "Sachsen", "Niedersachsen" is downloaded in MoNav config widget

Reproducible: Always

Steps to Reproduce:
1. Press the update button for "Sachsen" under "Manage Maps" in MoNav config widget
Actual Results:  
"Niedersachsen" is downloaded.

Expected Results:  
"Sachsen" should be updated.
Comment 1 Bernhard Beschow 2012-05-21 13:14:50 UTC
Git commit a30520356259d00f75cabb02a66d6fe73bc6a00e by Bernhard Beschow.
Committed on 21/05/2012 at 15:15.
Pushed by beschow into branch 'master'.

fix updating of MoNav maps

M  +1    -1    src/plugins/runner/monav/MonavConfigWidget.cpp

http://commits.kde.org/marble/a30520356259d00f75cabb02a66d6fe73bc6a00e
Comment 2 Bernhard Beschow 2012-05-22 09:40:51 UTC
Git commit 50652ab8adee0491cbc208f6a059f0d491909bec by Bernhard Beschow.
Committed on 21/05/2012 at 15:15.
Pushed by beschow into branch 'KDE/4.8'.

fix updating of MoNav maps
FIXED-IN: KDE-4.8.4
(cherry picked from commit a30520356259d00f75cabb02a66d6fe73bc6a00e)

M  +1    -1    src/plugins/runner/monav/MonavConfigWidget.cpp

http://commits.kde.org/marble/50652ab8adee0491cbc208f6a059f0d491909bec