fix updating of MoNav maps

BUG: 298508
FIXED-IN: KDE-4.8.4
(cherry picked from commit a30520356259d00f75cabb02a66d6fe73bc6a00e)