src/plugins/runner/monav/MonavConfigWidget.cpp
@@ -645,7 +645,7 @@ void MonavConfigWidget::upgradeMap( int index )
     QString payload = d->m_mapsModel->payload( index );
     if ( !payload.isEmpty() ) {
         foreach( const MonavStuffEntry &entry, d->m_remoteMaps ) {
-            if ( entry.payload().endsWith( payload ) ) {
+            if ( entry.payload().endsWith( '/' + payload ) ) {
                 d->m_currentDownload = entry.payload();
                 d->install();
                 return;
